# luma

./: .editorconfig  .gitignore  Cargo.toml  GC_HOOKS.md  IMPLEMENTATION_SUMMARY.md  LICENSE  OPERATOR_OVERLOADING.md  README.md  REFACTORING_TODO.md  SPEC.md  TODO.md  build.rs  justfile  nextest.toml  test_function.luma  test_function_typed.luma  test_special_complete.luma  test_special_function.luma  test_special_methods.luma  test_special_simple.luma  test_table.luma  test_table_double_underscore.luma  test_table_underscore.luma  test_underscore.luma
.cargo-husky/hooks/: pre-commit
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: build-binaries.yml  build.yml  deploy-docs.yml  release.yml  test.yml
benches/: parser_bench.rs  vm_bench.rs
crates/luma-cli/: Cargo.toml  build.rs
crates/luma-cli/src/: check.rs  compile.rs  debug.rs  lsp.rs  main.rs  repl.rs  run.rs  tests.rs  upgrade.rs  utils.rs
crates/luma-core/: Cargo.toml
crates/luma-core/src/: ast.rs  lib.rs  pipeline.rs  test_utils.rs
crates/luma-core/src/ast/: span.rs  types.rs
crates/luma-core/src/bytecode/: compile.rs  compiler_helpers.rs  emit_expr.rs  emit_stmt.rs  ir.rs  mod.rs
crates/luma-core/src/diagnostics/: mod.rs
crates/luma-core/src/parser/: errors.rs  expressions.rs  lexer.rs  literals.rs  mod.rs  operators.rs  patterns.rs  string.rs  types.rs  utils.rs
crates/luma-core/src/typecheck/: environment.rs  errors.rs  expressions.rs  mod.rs  patterns.rs  statements.rs  types.rs
crates/luma-core/src/vm/: errors.rs  execute.rs  frames.rs  interpreter.rs  mod.rs  value.rs
crates/luma-lsp/: Cargo.toml
crates/luma-lsp/src/: lib.rs
crates/luma-stdlib/: Cargo.toml
crates/luma-stdlib/src/: lib.rs
crates/luma-stdlib/src/native/: core.rs  core_tests.rs  ffi.rs  helpers.rs  helpers_tests.rs  io.rs  io_tests.rs  mod.rs  process.rs
docs/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
docs/docs/: cli.md  execution_environment.md  intro.md  specification.md
docs/docs/advanced/: _category_.json  async-await.md  error-handling.md  modules.md  pattern-matching.md
docs/docs/basics/: _category_.json  comments.md  control-flow.md  expressions.md  functions.md  literals.md  types.md  variables.md
docs/docs/getting-started/: _category_.json  installation.md
docs/docs/reference/: conversions.md  (+6 more)
examples/: file.luma
scripts/: install.ps1  install.sh
src/: ast.rs  lib.rs  main.rs  pipeline.rs  prelude.luma  test_utils.rs
src/ast/: patterns.rs  span.rs  types.rs
src/bytecode/: compile.rs  emit_expr.rs  helpers.rs  ir.rs  mod.rs
src/cli/: check.rs  compile.rs  debug.rs  lsp.rs  mod.rs  repl.rs  run.rs  upgrade.rs  utils.rs
src/diagnostics/: mod.rs
src/lsp/: mod.rs
src/parser/: errors.rs  expressions.rs  lexer.rs  literals.rs  mod.rs  operators.rs  patterns.rs  recovery.rs  statements.rs  string.rs  types.rs  utils.rs
src/typecheck/: environment.rs  errors.rs  expressions.rs  mod.rs  patterns.rs  statements.rs  types.rs
src/vm/: errors.rs  execute.rs  interpreter.rs  mod.rs  modules.rs  operators.rs  stack.rs  value.rs  vm.rs
tests/: README.md  diagnostic_tests.rs  error_recovery_tests.rs  integration.rs  integration_collections.rs  integration_control_flow.rs  integration_errors.rs  integration_expressions.rs  integration_functions.rs  integration_programs.rs  integration_runtime.rs  integration_tests.rs  literate_experiment.md  lsp_tests.rs  parser_tests.rs  repl_tests.rs  runtime_tests.rs  should_fail_tests.rs  span_coverage_test.rs  stdin_tests.rs  typecheck_tests.rs
tests/common/: mod.rs
tests/integration/: collections.rs  control_flow.rs  errors.rs  expressions.rs  functions.rs  mod.rs  programs.rs
tests/runtime/: array_read.ron  array_write.luma  break_dowhile.luma  break_dowhile.ron  break_for.luma  break_nested.luma  break_nested.ron  break_simple.luma  break_simple.ron  cast_access_parent_field.luma  cast_access_parent_field.ron  cast_inheritance.luma  cast_inheritance.ron  cast_metadata.luma  cast_simple.luma  cast_simple.ron  cast_trait.luma  cast_trait.ron  closure_simple.luma  closures_shared_state.luma  comprehensive_types.luma  continue_for.luma  continue_for.ron  continue_nested.luma  continue_nested.ron  continue_simple.luma  continue_simple.ron  destructure_array.luma  destructure_array.ron  destructure_global_array.luma  destructure_global_array.ron  destructure_local_array.luma  destructure_local_array.ron  destructure_rest_count.luma  destructure_rest_count.ron  destructure_rest_slice.luma  destructure_rest_slice.ron  destructure_table.luma  destructure_table.ron  destructure_tail.luma  (+91 more)
tests/should_fail/: README.md  circular_import.luma  duplicate_named_arg.luma  function_generic_arg_mismatch.luma  function_return_mismatch.luma  illegal_table_key.luma  immutable_let.luma  invalid_interpolation.luma  match_missing_tag.luma  match_not_exhaustive.luma  number_plus_string.luma  table_unknown_field.luma  type_mismatch_add.luma  unary_neg_no_overload.luma  undefined_var.luma  unreachable_pattern.expect  unreachable_pattern.luma  wrong_arity.luma
(+221 files in other folders)
