[package]
name = "luma"
version = "0.3.1"
edition = "2024"
license = "MIT"
description = "Taya's Scripting Language"
homepage = "https://github.com/tayadev/luma"
repository = "https://github.com/tayadev/luma"
publish = false

[lib]
name = "luma"
path = "src/lib.rs"

[dependencies]
chumsky = "0.11.2"
ron = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
walkdir = "2.5.0"
reqwest = { version = "0.12", features = ["blocking"] }
zip = "2.1"
bytes = "1.0"
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
libffi = "5.0.0"
libc = "0.2"
libloading = "0.8"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["precommit-hook", "user-hooks"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "parser_bench"
harness = false

[[bench]]
name = "vm_bench"
harness = false
