[workspace]
members = [
    "crates/luma-core",
    "crates/luma-stdlib",
    "crates/luma-cli",
    "crates/luma-lsp",
]
resolver = "2"

[workspace.package]
version = "0.3.2"
edition = "2024"
license = "MIT"
homepage = "https://github.com/tayadev/luma"
repository = "https://github.com/tayadev/luma"

[workspace.dependencies]
# Workspace internal dependencies
luma-core = { path = "crates/luma-core", version = "0.3.2" }
luma-stdlib = { path = "crates/luma-stdlib", version = "0.3.2" }

# External dependencies shared across crates
chumsky = "0.11.2"
ron = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
walkdir = "2.5.0"
reqwest = { version = "0.12", features = ["blocking"] }
zip = "2.1"
bytes = "1.0"
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
libffi = "5.0.0"
libc = "0.2"
libloading = "0.8"

# Dev dependencies
criterion = { version = "0.5", features = ["html_reports"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
