[package]
name = "luma-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Language Server Protocol implementation for Luma"
homepage.workspace = true
repository.workspace = true
publish = false

[lib]
name = "luma_lsp"
path = "src/lib.rs"

[dependencies]
luma-core = { workspace = true }
tower-lsp = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
