[package]
name = "luma-stdlib"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Standard library for the Luma programming language"
homepage.workspace = true
repository.workspace = true
publish = false

[lib]
name = "luma_stdlib"
path = "src/lib.rs"

[dependencies]
luma-core = { workspace = true }
libffi = { workspace = true }
libc = { workspace = true }
libloading = { workspace = true }
serde_json = { workspace = true }
